crates/codira_codegen/src/snapshots/codira_codegen__test__assign_shift_op_i32.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn assign_leftshift(a: i32, b: i32) -> i32 {\n        a <<= b;\n        a\n    }\n    pub fn assign_rightshift(a: i32, b: i32) -> i32 {\n        a >>= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i32 @assign_leftshift(i32 %0, i32 %1) {
body:
  %left_shift = shl i32 %0, %1
  ret i32 %left_shift
}

define i32 @assign_rightshift(i32 %0, i32 %1) {
body:
  %right_shift = ashr i32 %0, %1
  ret i32 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

