crates/codira_codegen/src/snapshots/codira_codegen__test__assign_shift_op_i8.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    pub fn assign_leftshift(a: i8, b: i8) -> i8 {\n        a <<= b;\n        a\n    }\n    pub fn assign_rightshift(a: i8, b: i8) -> i8 {\n        a >>= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x i64*]

define i8 @assign_leftshift(i8 %0, i8 %1) {
body:
  %left_shift = shl i8 %0, %1
  ret i8 %left_shift
}

define i8 @assign_rightshift(i8 %0, i8 %1) {
body:
  %right_shift = ashr i8 %0, %1
  ret i8 %right_shift
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x i64*] zeroinitializer

